[gd_scene load_steps=3 format=3 uid="uid://intro_page_001"]

[ext_resource type="Script" path="res://1.Codebase/src/scripts/ui/intro_page.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.15, 0.2, 0.3, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.8, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="IntroPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.15, 0.25, 1)

[node name="MenuContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MenuContainer"]
custom_minimum_size = Vector2(900, 700)
layout_mode = 2
theme_override_styles/panel = SubResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MenuContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "INTRO_TITLE"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="MenuContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="World" type="ScrollContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/World"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/World/Margin"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25

[node name="Sec1" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/World/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Panel/VBoxContainer/TabContainer/World/Margin/VBox/Sec1"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "INTRO_TAB_WORLD_SEC1_TITLE"

[node name="Content" type="RichTextLabel" parent="MenuContainer/Panel/VBoxContainer/TabContainer/World/Margin/VBox/Sec1"]
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "INTRO_TAB_WORLD_SEC1_BODY"
fit_content = true

[node name="Sec2" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/World/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Panel/VBoxContainer/TabContainer/World/Margin/VBox/Sec2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "INTRO_TAB_WORLD_SEC2_TITLE"

[node name="Content" type="RichTextLabel" parent="MenuContainer/Panel/VBoxContainer/TabContainer/World/Margin/VBox/Sec2"]
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "INTRO_TAB_WORLD_SEC2_BODY"
fit_content = true

[node name="Sec3" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/World/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Panel/VBoxContainer/TabContainer/World/Margin/VBox/Sec3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "INTRO_TAB_STORY_SEC1_TITLE"

[node name="Content" type="RichTextLabel" parent="MenuContainer/Panel/VBoxContainer/TabContainer/World/Margin/VBox/Sec3"]
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "INTRO_TAB_STORY_SEC1_BODY"
fit_content = true

[node name="Sec4" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/World/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Panel/VBoxContainer/TabContainer/World/Margin/VBox/Sec4"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "INTRO_TAB_STORY_SEC2_TITLE"

[node name="Content" type="RichTextLabel" parent="MenuContainer/Panel/VBoxContainer/TabContainer/World/Margin/VBox/Sec4"]
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "INTRO_TAB_STORY_SEC2_BODY"
fit_content = true

[node name="Gameplay" type="ScrollContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Gameplay"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Gameplay/Margin"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25

[node name="Sec1" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Gameplay/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Gameplay/Margin/VBox/Sec1"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "INTRO_TAB_GAMEPLAY_SEC1_TITLE"

[node name="Content" type="RichTextLabel" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Gameplay/Margin/VBox/Sec1"]
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "INTRO_TAB_GAMEPLAY_SEC1_BODY"
fit_content = true

[node name="Sec2" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Gameplay/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Gameplay/Margin/VBox/Sec2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "INTRO_TAB_GAMEPLAY_SEC2_TITLE"

[node name="Content" type="RichTextLabel" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Gameplay/Margin/VBox/Sec2"]
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "INTRO_TAB_GAMEPLAY_SEC2_BODY"
fit_content = true

[node name="Mechanics" type="ScrollContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25

[node name="Sec1" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox/Sec1"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "INTRO_TAB_GAMEPLAY_SEC3_TITLE"

[node name="Content" type="RichTextLabel" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox/Sec1"]
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "INTRO_TAB_GAMEPLAY_SEC3_BODY"
fit_content = true

[node name="Sec2" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox/Sec2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "INTRO_TAB_MECHANICS_SEC1_TITLE"

[node name="Content" type="RichTextLabel" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox/Sec2"]
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "INTRO_TAB_MECHANICS_SEC1_BODY"
fit_content = true

[node name="Sec3" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox/Sec3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "INTRO_TAB_MECHANICS_SEC2_TITLE"

[node name="Content" type="RichTextLabel" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox/Sec3"]
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "INTRO_TAB_MECHANICS_SEC2_BODY"
fit_content = true

[node name="Sec4" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox/Sec4"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "INTRO_TAB_MECHANICS_GLORIA_TITLE"

[node name="Content" type="RichTextLabel" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox/Sec4"]
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "INTRO_TAB_MECHANICS_GLORIA_BODY"
fit_content = true

[node name="Sec5" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox/Sec5"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "INTRO_TAB_MECHANICS_DIARY_TITLE"

[node name="Content" type="RichTextLabel" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox/Sec5"]
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "INTRO_TAB_MECHANICS_DIARY_BODY"
fit_content = true

[node name="Sec6" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox/Sec6"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "INTRO_TAB_MECHANICS_BUTTERFLY_TITLE"

[node name="Content" type="RichTextLabel" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox/Sec6"]
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "INTRO_TAB_MECHANICS_BUTTERFLY_BODY"
fit_content = true

[node name="Sec7" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox/Sec7"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "INTRO_TAB_MECHANICS_TROLLEY_TITLE"

[node name="Content" type="RichTextLabel" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Mechanics/Margin/VBox/Sec7"]
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "INTRO_TAB_MECHANICS_TROLLEY_BODY"
fit_content = true

[node name="Credits" type="ScrollContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Credits"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Credits/Margin"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25

[node name="Sec1" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Credits/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Credits/Margin/VBox/Sec1"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "INTRO_TAB_CREDITS_ENGINE_TITLE"

[node name="Content" type="RichTextLabel" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Credits/Margin/VBox/Sec1"]
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "INTRO_TAB_CREDITS_ENGINE_BODY"
fit_content = true

[node name="Sec2" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Credits/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Credits/Margin/VBox/Sec2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "INTRO_TAB_CREDITS_TEACHER_TITLE"

[node name="Content" type="RichTextLabel" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Credits/Margin/VBox/Sec2"]
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "INTRO_TAB_CREDITS_TEACHER_BODY"
fit_content = true

[node name="Sec3" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Credits/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Credits/Margin/VBox/Sec3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "INTRO_TAB_CREDITS_PROJECT_TITLE"

[node name="Content" type="RichTextLabel" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Credits/Margin/VBox/Sec3"]
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "INTRO_TAB_CREDITS_PROJECT_BODY"
fit_content = true

[node name="Sec4" type="VBoxContainer" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Credits/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Credits/Margin/VBox/Sec4"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "INTRO_TAB_CREDITS_FONTS_TITLE"

[node name="Content" type="RichTextLabel" parent="MenuContainer/Panel/VBoxContainer/TabContainer/Credits/Margin/VBox/Sec4"]
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "INTRO_TAB_CREDITS_FONTS_BODY"
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="MenuContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="CharactersButton" type="Button" parent="MenuContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "INTRO_BUTTON_CHARACTERS"

[node name="CloseButton" type="Button" parent="MenuContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "ASSET_BACK"

[connection signal="pressed" from="MenuContainer/Panel/VBoxContainer/CloseButton" to="." method="_on_close_pressed"]
[connection signal="pressed" from="MenuContainer/Panel/VBoxContainer/CharactersButton" to="." method="_on_characters_button_pressed"]
